--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@interactjs/types": "^1.10.27",
     "firebase": "^11.0.1",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
