--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "@interactjs/types": "^1.10.27",
     "firebase": "^11.0.1",
+    "immutability-helper": "^3.1.1",
     "next": "15.0.1",
+    "notistack": "^3.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-firebase-hooks": "^5.1.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
