--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@interactjs/types": "^1.10.27",
+    "@radix-ui/react-icons": "^1.3.1",
     "firebase": "^11.0.1",
+    "framer-motion": "^11.11.11",
     "immutability-helper": "^3.1.1",
     "next": "15.0.1",
     "notistack": "^3.0.1",
