--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@heroicons/react": "^2.1.5",
     "@interactjs/types": "^1.10.27",
     "@radix-ui/react-icons": "^1.3.1",
+    "@types/formidable": "^3.4.5",
+    "axios": "^1.7.7",
     "firebase": "^11.0.1",
+    "form-data": "^4.0.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.11.11",
     "immutability-helper": "^3.1.1",
     "next": "15.0.1",
