--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.1.1",
+    "@emotion/react": "^11.13.3",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@interactjs/types": "^1.10.27",
@@ -21,12 +23,14 @@
     "framer-motion": "^11.11.11",
     "immutability-helper": "^3.1.1",
     "next": "15.0.1",
+    "next-themes": "^0.4.3",
     "notistack": "^3.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
